Bump maven.compiler.release from 8 to 17
Raise the minimum JDK from 8 to 17 in preparation for upgrading
JGit to 7.x which requires JDK 17. Since Scalpel is a build tool
and the primary consumer (Apache Camel) already requires JDK 17,
this is acceptable.

Also fixes modernizer violations triggered by the new target:
- Paths.get() → Path.of()
- Collections.emptyList/Set/Map() → List/Set/Map.of()
- Collections.singletonList() → List.of()
- String.format() → String.formatted()

Refs #26

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>